# relic-sdk

./: .env.example  .gitignore  Makefile  README.md  combined.coverage  dune-project  relic-sdk.opam  shell.nix
.github/workflows/: ci.yml
doc/: Dockerfile
lib/: client.ml  dune  form.ml  index.mld
lib/api/community/: achievement.ml  achievement.mli  advertisement.ml  advertisement.mli  clan.ml  clan.mli  community_event.ml  community_event.mli  external.ml  external.mli  item.ml  leaderboard.ml  leaderboard.mli  news.ml  news.mli
lib/api/game/: advertisement.ml  login.ml  news.ml  platformlogin.ml
lib/authentication/: session.ml
lib/compression/: domain.ml  zlib.ml  zlib.mli  zlib_stubs.c
lib/data/: game.ml  game.mli  json.ml  query.ml  query.mli  sort.ml
lib/data/platform/: cookie.ml  credentials.ml  platform_type.ml  steam_login.ml
lib/data/requester/: json.ml  json.mli
lib/logger/: async.ml  level.ml  sync.ml
lib/models/response/: platform_login.ml
lib/models/response/community/: achievement.ml  achievement.mli  achievement_attainment.ml  advertisement.ml  avatar_stat.ml  clan.ml  clan_info.ml  community_event.ml  inventory.ml  leaderboard.ml  leaderboard2.ml  news.ml  personal_stat.ml  recent_match_history.ml  user_achievements.ml
lib/models/response/game/: news.ml  observable_advertisements.ml
lib/models/stub/: achievement.ml  achievement_attainment.ml  advertisement.ml  avatar.ml  clan.ml  clan_info.ml  clan_permissions.ml  community_event.ml  inventory.ml  join_policy.ml  leaderboard_region.ml  leaderboard_sorting.ml  match_member.ml  match_type.ml  news.ml  race.ml  response.ml  slot_info.ml  stat_group.ml
lib/models/stub/community/: achievement.ml  advertisement.ml  advertisement_options.ml  avatar_stat.ml  clan_member.ml  clan_member_avatar.ml  community_event.ml  leaderboard.ml  leaderboard_map.ml  leaderboard_stat.ml  match_history_report_results.ml  match_history_stats.ml  slot.ml
lib/models/stub/game/: news.ml  observable_advertisement.ml  observable_advertisement_member.ml  observable_advertisment_member.ml
make/ocaml/: _test.mk  (+1 more)
tests/: dune  test.ml  util.ml
(+28 files in other folders)
