(include_subdirs qualified)

(library
 (name relic_sdk)
 (public_name relic-sdk)
 (flags :standard -safe-string)
 (libraries yojson cohttp-lwt-unix bigarray base64)
 (foreign_stubs
  (language c)
  (names zlib_stubs)
  (flags -w -std=c99 -fPIC))
 (c_library_flags -lz)
 (instrumentation
  (backend bisect_ppx)))

(documentation
 (package relic-sdk))
